--- a/src/app/organization/bulk-import/bulk-import.component.html
+++ b/src/app/organization/bulk-import/bulk-import.component.html
@@ -13,56 +13,56 @@
             <mat-icon matListIcon>
               <fa-icon icon="building" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Offices</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Offices'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Users']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="user" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Users</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Users'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Groups']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="users" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Groups</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Groups'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Loan Accounts']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Loan Accounts</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.LoanAccounts'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Savings Accounts']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Savings Accounts</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.SavingsAccounts'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Fixed Deposit Accounts']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Fixed Deposit Accounts</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.FixedDepositAccounts'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Chart of Accounts']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Chart of Accounts</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.ChartOfAccounts'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Share Accounts']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Share Accounts</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.ShareAccounts'| translate }}</h4>
           </mat-list-item>
 
         </mat-nav-list>
@@ -77,7 +77,7 @@
             <mat-icon matListIcon>
               <fa-icon icon="user" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Employees</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Employees'| translate }}</h4>
           </mat-list-item>
 
 
@@ -85,56 +85,56 @@
             <mat-icon matListIcon>
               <fa-icon icon="user" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Clients</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Clients'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Centers']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="users" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Centers</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Centers'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Loan Repayments']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Loan Repayments</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.LoanRepayments'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Savings Transactions']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Savings Transactions</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.SavingsTransactions'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Fixed Deposit Transactions']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Fixed Deposit Transactions</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.FixedDepositTransactions'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Recurring Deposit Transactions']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Recurring Deposit Transactions</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.RecurringDepositTransactions'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Journal Entries']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Journal Entries</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.JournalEntries'| translate }}</h4>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['Guarantors']" *midasHasPermission="'READ_OFFICE'">
             <mat-icon matListIcon>
               <fa-icon icon="chevron-right" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Guarantors</h4>
+            <h4 matLine>{{'Organization.BulkImportComponent.Guarantors'| translate }}</h4>
           </mat-list-item>
 
         </mat-nav-list>
