--- a/src/app/organization/manage-funds/manage-funds.component.html
+++ b/src/app/organization/manage-funds/manage-funds.component.html
@@ -10,7 +10,7 @@
         <mat-form-field fxFlex="calc(90%-20px)">
           <textarea formControlName="name" matInput placeholder="New Fund"></textarea>
             <mat-error *ngIf="fundForm.controls.name.hasError('required')">
-                <strong>Required field</strong>
+                <strong>{{'Organization.ManageFund.RequiredField'| translate }}</strong>
             </mat-error>
         </mat-form-field>
 
