--- a/src/app/organization/payment-types/create-payment-type/create-payment-type.component.html
+++ b/src/app/organization/payment-types/create-payment-type/create-payment-type.component.html
@@ -9,37 +9,37 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Payment Type</mat-label>
+            <mat-label>{{'Organization.PaymentTypes.Create.name'| translate }}</mat-label>
             <input required matInput formControlName="name">
             <mat-error *ngIf="paymentTypeForm.controls.name.hasError('required')">
-              Payment Type is <strong>required</strong>
+              {{'Organization.PaymentTypes.Create.errname'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'Organization.PaymentTypes.Create.Description'| translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
-  
+
           <mat-checkbox labelPosition="before" formControlName="isCashPayment" class="status">
-            Is Cash Payment?
+            {{'Organization.PaymentTypes.Create.isCashPayment'| translate }}
           </mat-checkbox>
 
           <mat-form-field>
-            <mat-label>Position</mat-label>
+            <mat-label>{{'Organization.PaymentTypes.Create.Position'| translate }}</mat-label>
             <input required matInput formControlName="position">
             <mat-error *ngIf="paymentTypeForm.controls.position.hasError('required')">
-              Position is <strong>required</strong>
+              {{'Organization.PaymentTypes.Create.position'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
-          
+
         </div>
-        
+
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!paymentTypeForm.valid" *midasHasPermission="'CREATE_PAYMENTTYPE'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!paymentTypeForm.valid" *midasHasPermission="'CREATE_PAYMENTTYPE'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
