--- a/src/app/organization/working-days/working-days.component.html
+++ b/src/app/organization/working-days/working-days.component.html
@@ -9,7 +9,7 @@
         <div fxLayout="column">
 
           <div fxLayout="row" fxLayout.lt-md="column">
-            <mat-label fxFlex="50%" class="mat-h4">Working Days</mat-label>
+            <mat-label fxFlex="50%" class="mat-h4">{{'Organization.WorkingDaysComponent.recurrence'| translate }}</mat-label>
             <div fxFlex="50%" fxLayout="column" formArrayName="recurrence">
               <div *ngFor="let day of recurrence.controls; let i = index;">
                 <mat-checkbox labelPosition="after" [formControlName]="i">
@@ -20,7 +20,7 @@
           </div>
 
           <mat-form-field>
-            <mat-label>Payments due on non working days</mat-label>
+            <mat-label>{{'Organization.WorkingDaysComponent.repaymentRescheduleType'| translate }}</mat-label>
             <mat-select formControlName="repaymentRescheduleType">
               <mat-option *ngFor="let repaymentRescheduleType of repaymentRescheduleTypeData" [value]="repaymentRescheduleType.id">
                 {{ repaymentRescheduleType.value }}
@@ -29,7 +29,7 @@
           </mat-form-field>
 
           <mat-checkbox labelPosition="before" formControlName="extendTermForDailyRepayments">
-            Extend the term for loans following a daily repayment schedule
+            {{'Organization.WorkingDaysComponent.extendTermForDailyRepayments'| translate }}
           </mat-checkbox>
 
         </div>
@@ -37,8 +37,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="workingDaysForm.pristine" *midasHasPermission="'UPDATE_WORKINGDAYS'">Submit</button>
+        <button mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="workingDaysForm.pristine" *midasHasPermission="'UPDATE_WORKINGDAYS'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
