--- a/src/app/organization/adhoc-query/adhoc-query.component.html
+++ b/src/app/organization/adhoc-query/adhoc-query.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_ADHOC'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create AdHoc Query
+    {{'Organization.AdhocQuery.btnCreateAdHocQuery'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.AdhocQuery.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
@@ -19,32 +19,32 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.Name'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="query">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> SQL Query </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.SQLQuery'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.query }} </td>
       </ng-container>
 
       <ng-container matColumnDef="tableName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Table Affected </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.tableName'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.tableName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.Email'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.email }} </td>
       </ng-container>
 
       <ng-container matColumnDef="reportRunFrequency">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Run Frequency </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.reportRunFrequency'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.reportRunFrequency }} </td>
       </ng-container>
 
       <ng-container matColumnDef="isActive">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.Status'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery">
           <div [className]="adhocquery.isActive === true ? 'true' : 'false'">
             <fa-icon matTooltip="{{ adhocquery.isActive === true ? 'Active' : 'Inactive' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
@@ -53,7 +53,7 @@
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Created By </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.AdhocQuery.createdBy'| translate }} </th>
         <td mat-cell *matCellDef="let adhocquery"> {{ adhocquery.createdBy }} </td>
       </ng-container>
 
