--- a/src/app/organization/adhoc-query/create-adhoc-query/create-adhoc-query.component.html
+++ b/src/app/organization/adhoc-query/create-adhoc-query/create-adhoc-query.component.html
@@ -9,47 +9,47 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.Create.name'| translate }}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="adhocQueryForm.controls.name.hasError('required')">
-              Name is <strong>required</strong>
+              {{'Organization.AdhocQuery.errname'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>SQL Query</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.query'| translate }}</mat-label>
             <textarea matInput required formControlName="query"></textarea>
             <mat-error *ngIf="adhocQueryForm.controls.query.hasError('required')">
-              SQL Query is <strong>required</strong>
+              {{'Organization.AdhocQuery.errquery'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Insert into table</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.tableName'| translate }}</mat-label>
             <input matInput required formControlName="tableName">
             <mat-error *ngIf="adhocQueryForm.controls.tableName.hasError('required')">
-              Insert into table is <strong>required</strong>
+              {{'Organization.AdhocQuery.errtableName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Table Fields</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.tableFields'| translate }}</mat-label>
             <textarea matInput required formControlName="tableFields"></textarea>
             <mat-error *ngIf="adhocQueryForm.controls.tableFields.hasError('required')">
-              Table Fields are <strong>required</strong>
+              {{'Organization.AdhocQuery.errtableFields'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Email</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.email'| translate }}</mat-label>
             <input matInput formControlName="email">
             <mat-error *ngIf="adhocQueryForm.controls.email.hasError('email')">
-              Email is <strong>invalid</strong>
+              {{'Organization.AdhocQuery.erremail'| translate }}<strong>{{'Organization.AdhocQuery.invalid'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Report Run Frequency</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.reportRunFrequency'| translate }}</mat-label>
             <mat-select formControlName="reportRunFrequency">
               <mat-option *ngFor="let reportRunFrequency of reportRunFrequencyData" [value]="reportRunFrequency.id">
                 {{ reportRunFrequency.value }}
@@ -58,18 +58,18 @@
           </mat-form-field>
 
           <mat-form-field *ngIf="adhocQueryForm.controls.reportRunFrequency.value === 5">
-            <mat-label>Custom Report Run Frequency (Days)</mat-label>
+            <mat-label>{{'Organization.AdhocQuery.reportRunEvery'| translate }}</mat-label>
             <input type="number" matInput required formControlName="reportRunEvery">
             <mat-error *ngIf="adhocQueryForm.controls.reportRunEvery.hasError('required')">
-              Custom Report Run Frequency is <strong>required</strong>
+              {{'Organization.AdhocQuery.errreportRunEvery'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
             <mat-error *ngIf="adhocQueryForm.controls.reportRunEvery.hasError('min')">
-              Custom Report Run Frequency <strong>must be larger than 0</strong>
+              {{'Organization.AdhocQuery.errreportRunEvery2'| translate }}<strong>{{'Organization.AdhocQuery.strongAlert'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-checkbox labelPosition="before" formControlName="isActive">
-            Active
+            {{'Organization.AdhocQuery.isActive'| translate }}
           </mat-checkbox>
 
         </div>
@@ -77,8 +77,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!adhocQueryForm.valid" *midasHasPermission="'CREATE_ADHOC'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!adhocQueryForm.valid" *midasHasPermission="'CREATE_ADHOC'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
