--- a/src/app/organization/currencies/currencies.component.html
+++ b/src/app/organization/currencies/currencies.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="'manage'" *midasHasPermission="'UPDATE_CURRENCY'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Add/Edit
+    {{'Organization.Currencies.btnAddEdit'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.Currencies.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
@@ -19,12 +19,12 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Currency Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Currencies.name'| translate }} </th>
         <td mat-cell *matCellDef="let currency"> {{ currency.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Currency Code </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Currencies.code'| translate }} </th>
         <td mat-cell *matCellDef="let currency"> {{ currency.code }} </td>
       </ng-container>
 
