--- a/src/app/organization/entity-data-table-checks/create-enity-data-table-checks/create-enity-data-table-checks.component.html
+++ b/src/app/organization/entity-data-table-checks/create-enity-data-table-checks/create-enity-data-table-checks.component.html
@@ -9,62 +9,62 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Entity</mat-label>
+            <mat-label>{{'Organization.EntityData.CreateEntity.Entity'| translate }}</mat-label>
             <mat-select required formControlName="entity">
               <mat-option *ngFor="let entity of entityTypes" [value]="entity.value">
-                {{ entity.name }} 
+                {{ entity.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createEntityForm.controls.entity.hasError('required')">
-              Entity is <strong>required</strong>
+              {{'Organization.EntityData.CreateEntity.errEntity'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Status</mat-label>
+            <mat-label>{{'Organization.EntityData.CreateEntity.Status'| translate }}</mat-label>
             <mat-select required formControlName="status">
               <mat-option *ngFor="let status of statusList" [value]="status.code">
-                {{ status.name }} 
+                {{ status.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createEntityForm.controls.status.hasError('required')">
-              Status is <strong>required</strong>
+              {{'Organization.EntityData.CreateEntity.errStatus'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Data Table</mat-label>
+            <mat-label>{{'Organization.EntityData.CreateEntity.datatableName'| translate }}</mat-label>
             <mat-select required formControlName="datatableName">
               <mat-option *ngFor="let dataTable of dataTableList" [value]="dataTable.dataTableName">
-                {{ dataTable.dataTableName }} 
+                {{ dataTable.dataTableName }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createEntityForm.controls.datatableName.hasError('required')">
-              Data Table is <strong>required</strong>
+              {{'Organization.EntityData.CreateEntity.errdatatableName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="entityType === 'm_loan'">
-            <mat-label>Products</mat-label>
+            <mat-label>{{'Organization.EntityData.CreateEntity.Products'| translate }}</mat-label>
             <mat-select required formControlName="productId">
               <mat-option *ngFor="let loanProducts of createEntityData.loanProductDatas" [value]="loanProducts.id">
-                {{ loanProducts.name }} 
+                {{ loanProducts.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createEntityForm.controls.productId.hasError('required')">
-              Loan Product is <strong>required</strong>
+              {{'Organization.EntityData.CreateEntity.errProducts'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="entityType === 'm_savings_account'">
-            <mat-label>Products</mat-label>
+            <mat-label>{{'Organization.EntityData.CreateEntity.Products'| translate }}</mat-label>
             <mat-select required formControlName="productId">
               <mat-option *ngFor="let savingsProducts of createEntityData.savingsProductDatas" [value]="savingsProducts.id">
-                {{ savingsProducts.name }} 
+                {{ savingsProducts.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createEntityForm.controls.productId.hasError('required')">
-              Loan Product is <strong>required</strong>
+              {{'Organization.EntityData.CreateEntity.errProducts'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -73,8 +73,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!createEntityForm.valid">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!createEntityForm.valid">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
