--- a/src/app/organization/entity-data-table-checks/entity-data-table-checks.component.html
+++ b/src/app/organization/entity-data-table-checks/entity-data-table-checks.component.html
@@ -2,7 +2,7 @@
 
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_ENTITY_DATATABLE_CHECK'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create
+    {{'Organization.EntityData.btnCreate'| translate }}
   </button>
 
 </div>
@@ -11,7 +11,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.EntityData.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
@@ -21,27 +21,27 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="entity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Entity </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.EntityData.Entity'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck"> {{ entityDataTableCheck.entity }} </td>
       </ng-container>
 
       <ng-container matColumnDef="productName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.EntityData.productName'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck"> {{ entityDataTableCheck.productName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="datatableName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Table </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.EntityData.datatableName'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck"> {{ entityDataTableCheck.datatableName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.EntityData.Status'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck"> {{ entityDataTableCheck.status.value }} </td>
       </ng-container>
 
       <ng-container matColumnDef="systemDefined">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> System Defined </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.EntityData.systemDefined'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck">
           <div [className]="entityDataTableCheck.systemDefined === true ? 'true' : 'false'">
             <fa-icon *ngIf="entityDataTableCheck.systemDefined" icon="check-circle" size="lg" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
@@ -51,10 +51,10 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Organization.EntityData.Actions'| translate }} </th>
         <td mat-cell *matCellDef="let entityDataTableCheck">
           <button mat-button (click)="deleteEntityDataTableCheck(entityDataTableCheck.id)" color="warn" *midasHasPermission="'DELETE_ENTITY_DATATABLE_CHECK'">
-            <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+            <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{'Organization.EntityData.btnDelete'| translate }}
           </button>
         </td>
       </ng-container>
