--- a/src/app/organization/holidays/create-holiday/create-holiday.component.html
+++ b/src/app/organization/holidays/create-holiday/create-holiday.component.html
@@ -9,70 +9,70 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.Name'| translate }}</mat-label>
             <input matInput required autofocus formControlName="name">
             <mat-error *ngIf="holidayForm.controls.name.hasError('required')">
-              Name <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Name'| translate }} <strong>{{'Organization.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>From Date</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.fromDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" required formControlName="fromDate">
             <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #fromDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.fromDate.hasError('required')">
-              From Date <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Create.fromDate'| translate }} <strong>{{'Organization.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>To Date</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.toDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" required formControlName="toDate">
             <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #toDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.toDate.hasError('required')">
-              To Date <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Create.toDate'| translate }} <strong>{{'Organization.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Repayment Scheduling Type</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.reschedulingType'| translate }}</mat-label>
             <mat-select required formControlName="reschedulingType">
               <mat-option *ngFor="let repayments of repaymentSchedulingTypes" [value]="repayments.id">
-                {{ repayments.value }} 
+                {{ repayments.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="holidayForm.controls.reschedulingType.hasError('required')">
-              Repayment Scheduling Type is <strong>required</strong>
+              {{'Organization.HolidaysComponent.Create.errreschedulingType'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="holidayForm.contains('repaymentsRescheduledTo')">
-            <mat-label>Repayment scheduled to</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.repaymentsRescheduledTo'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="repaymentDatePicker" required formControlName="repaymentsRescheduledTo">
             <mat-datepicker-toggle matSuffix [for]="repaymentDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #repaymentDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.repaymentsRescheduledTo.hasError('required')">
-              Repayment Scheduled To <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Create.errrepaymentsRescheduledTo'| translate }}<strong>{{'Organization.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.Description'| translate }}</mat-label>
             <input matInput formControlName="description">
-          </mat-form-field>   
-          
+          </mat-form-field>
+
           <!-- TODO: Replace multi-select by custom angular material tree -->
           <mat-form-field>
-            <mat-label>Applicable Offices</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Create.offices'| translate }}</mat-label>
             <mat-select required formControlName="offices" multiple>
               <mat-option *ngFor="let office of officesData" [value]="{ officeId: office.id }">
-                {{ office.name }} 
+                {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="holidayForm.controls.offices.hasError('required')">
-              Offices is <strong>required</strong>
+              {{'Organization.HolidaysComponent.Create.erroffices'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -81,8 +81,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!holidayForm.valid" *midasHasPermission="'CREATE_HOLIDAY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!holidayForm.valid" *midasHasPermission="'CREATE_HOLIDAY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
