--- a/src/app/organization/holidays/edit-holiday/edit-holiday.component.html
+++ b/src/app/organization/holidays/edit-holiday/edit-holiday.component.html
@@ -9,57 +9,57 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.Name'| translate }}</mat-label>
             <input matInput required autofocus formControlName="name">
             <mat-error *ngIf="holidayForm.controls.name.hasError('required')">
-              Name <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Edit.errName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="!isActiveHoliday">
-            <mat-label>From Date</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.fromDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" required formControlName="fromDate">
             <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #fromDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.fromDate.hasError('required')">
-              From Date <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Edit.errfromDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="!isActiveHoliday">
-            <mat-label>To Date</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.toDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" required formControlName="toDate">
             <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #toDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.toDate.hasError('required')">
-              To Date <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Edit.errtoDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="!isActiveHoliday">
-            <mat-label>Repayment Scheduling Type</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.reschedulingType'| translate }}</mat-label>
             <mat-select required formControlName="reschedulingType">
               <mat-option *ngFor="let repayments of holidayData.repaymentSchedulingTypes" [value]="repayments.id">
-                {{ repayments.value }} 
+                {{ repayments.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="holidayForm.controls.reschedulingType.hasError('required')">
-              Repayment Scheduling Type is <strong>required</strong>
+              {{'Organization.HolidaysComponent.Edit.errreschedulingType'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="!isActiveHoliday && reSchedulingType === 2">
-            <mat-label>Repayment scheduled to</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.repaymentsRescheduledTo'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="repaymentDatePicker" required formControlName="repaymentsRescheduledTo">
             <mat-datepicker-toggle matSuffix [for]="repaymentDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #repaymentDatePicker></mat-datepicker>
             <mat-error *ngIf="holidayForm.controls.repaymentsRescheduledTo.hasError('required')">
-              Repayment Scheduled To <strong>is required</strong>
+              {{'Organization.HolidaysComponent.Edit.errrepaymentsRescheduledTo'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'Organization.HolidaysComponent.Edit.Description'| translate }}</mat-label>
             <input matInput formControlName="description">
           </mat-form-field>
 
@@ -68,8 +68,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!holidayForm.valid" *midasHasPermission="'UPDATE_HOLIDAY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!holidayForm.valid" *midasHasPermission="'UPDATE_HOLIDAY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
