--- a/src/app/organization/loan-provisioning-criteria/edit-loan-provisioning-criteria/edit-loan-provisioning-criteria.component.html
+++ b/src/app/organization/loan-provisioning-criteria/edit-loan-provisioning-criteria/edit-loan-provisioning-criteria.component.html
@@ -9,15 +9,15 @@
         <div fxLayout="row" fxLayoutGap="2%">
 
           <mat-form-field fxFlex>
-            <mat-label>Provisioning Criteria</mat-label>
+            <mat-label>{{'Organization.LoanProvisioning.Edit.criteriaName'| translate }}</mat-label>
             <input required matInput formControlName="criteriaName">
             <mat-error *ngIf="provisioningCriteriaForm.controls.criteriaName.hasError('required')">
-              Provisioning Criteria is <strong>required</strong>
+              {{'Organization.LoanProvisioning.Edit.errcriteriaName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
-  
+
           <mat-form-field fxFlex>
-            <mat-label>Selected Products</mat-label>
+            <mat-label>{{'Organization.LoanProvisioning.Edit.loanProducts'| translate }}</mat-label>
             <mat-select formControlName="loanProducts" [compareWith]="compareOptions" multiple>
               <mat-option *ngFor="let product of loanProducts" [value]="product">
                 {{ product.name }}
@@ -33,60 +33,60 @@
 
     <div class="mat-elevation-z1">
 
-      <mat-hint *ngIf="!provisioningCriteriaFormValid">Please fill all provisioning criteria definitions.</mat-hint>
+      <mat-hint *ngIf="!provisioningCriteriaFormValid">{{'Organization.LoanProvisioning.Edit.provisioningCriteriaFormValid'| translate }}</mat-hint>
 
       <table mat-table class="m-t-10" [dataSource]="definitions">
 
         <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> Category </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.Category'| translate }} </th>
           <td mat-cell *matCellDef="let definition"> {{ definition.categoryName }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="minAge">
-          <th mat-header-cell *matHeaderCellDef> Min Age </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.minAge'| translate }} </th>
           <td mat-cell *matCellDef="let definition"> {{ definition.minAge || '0' }} </td>
         </ng-container>
 
         <ng-container matColumnDef="maxAge">
-          <th mat-header-cell *matHeaderCellDef> Max Age </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.maxAge'| translate }} </th>
           <td mat-cell *matCellDef="let definition"> {{ definition.maxAge || '0' }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="percentage">
-          <th mat-header-cell *matHeaderCellDef> Percentage (%)</th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.percentage'| translate }}</th>
           <td mat-cell *matCellDef="let definition"> {{ definition.provisioningPercentage || '0' }} </td>
         </ng-container>
 
         <ng-container matColumnDef="liabilityAccount">
-          <th mat-header-cell *matHeaderCellDef> Liability Account </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.liabilityAccount'| translate }} </th>
           <td mat-cell *matCellDef="let definition"> {{ (definition.liabilityAccount | find:loanProvisioningCriteriaAndTemplate.glAccounts:'id':'name') || '-' }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="expenseAccount">
-          <th mat-header-cell *matHeaderCellDef> Expense Account </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.expenseAccount'| translate }} </th>
           <td mat-cell *matCellDef="let definition"> {{ (definition.expenseAccount | find:loanProvisioningCriteriaAndTemplate.glAccounts:'id':'name') || '-' }} </td>
         </ng-container>
 
         <ng-container matColumnDef="edit">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.Edit.Actions'| translate }} </th>
           <td mat-cell *matCellDef="let definition">
             <button mat-button color="primary" (click)="editDefinition(definition)">
               <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-              Edit
+              {{ "ShareButton.Edit" | translate }}
             </button>
           </td>
         </ng-container>
-  
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
       </table>
 
-    </div>    
+    </div>
 
     <div class="m-t-20" fxLayout="row" fxLayoutAlign="center" fxLayoutGap="20px">
-      <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-      <button mat-raised-button color="primary" [disabled]="!provisioningCriteriaFormValid" (click)="submit()" *midasHasPermission="'UPDATE_CRITERIA'">Submit</button>
+      <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+      <button mat-raised-button color="primary" [disabled]="!provisioningCriteriaFormValid" (click)="submit()" *midasHasPermission="'UPDATE_CRITERIA'">{{ "ShareButton.Submit" | translate }}</button>
     </div>
 
   </mat-card>
