--- a/src/app/organization/loan-provisioning-criteria/view-loan-provisioning-criteria/view-loan-provisioning-criteria.component.html
+++ b/src/app/organization/loan-provisioning-criteria/view-loan-provisioning-criteria/view-loan-provisioning-criteria.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_CRITERIA'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
   <button mat-raised-button color="warn" (click)="deleteCriteria()" *midasHasPermission="'DELETE_CRITERIA'">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{ "ShareButton.DeleteEng" | translate }}
   </button>
 </div>
 
@@ -21,9 +21,9 @@
         <mat-divider [inset]="true"></mat-divider>
 
          <div fxFlexFill class="loanProduct">
-          <span fxFlex="40%">Loan Product:</span>
+          <span fxFlex="40%">{{'Organization.LoanProvisioning.View.loanProduct'| translate }}</span>
           <span fxFlex="60%">{{ loanProducts }}</span>
-        </div> 
+        </div>
 
       </div>
 
@@ -32,35 +32,35 @@
         <table mat-table class="mat-elevation-z1" [dataSource]="dataSource">
 
           <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> Category </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.Category'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.categoryName}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="minAge">
-            <th mat-header-cell *matHeaderCellDef> Min Age </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.minAge'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.minAge}} </td>
           </ng-container>
-      
+
           <ng-container matColumnDef="maxAge">
-            <th mat-header-cell *matHeaderCellDef> Max Age </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.maxAge'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.maxAge}} </td>
           </ng-container>
 
           <ng-container matColumnDef="percentage">
-            <th mat-header-cell *matHeaderCellDef> Percentage </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.Percentage'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.provisioningPercentage}} </td>
           </ng-container>
 
           <ng-container matColumnDef="liabilityAccount">
-            <th mat-header-cell *matHeaderCellDef> Liability Account </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.liabilityAccount'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.liabilityName}} </td>
           </ng-container>
 
           <ng-container matColumnDef="expenseAccount">
-            <th mat-header-cell *matHeaderCellDef> Expense Account </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Organization.LoanProvisioning.View.expenseAccount'| translate }} </th>
             <td mat-cell *matCellDef="let provisioningData"> {{provisioningData.expenseName}} </td>
           </ng-container>
-      
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
