--- a/src/app/organization/offices/offices.component.html
+++ b/src/app/organization/offices/offices.component.html
@@ -2,17 +2,17 @@
 
   <button mat-raised-button color="primary">
     <fa-icon icon="sitemap"></fa-icon>&nbsp;&nbsp;
-    Tree View
+    {{'Organization.Offices.btnTreeView'| translate }}
   </button>
 
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_OFFICE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Office
+    {{'Organization.Offices.btnCreateOffice'| translate }}
   </button>
 
   <button mat-raised-button color="primary" *midasHasPermission="'CREATE_OFFICE'" [routerLink]="['/organization', 'bulk-import', 'Offices']">
     <fa-icon icon="upload"></fa-icon>&nbsp;&nbsp;
-    Import Offices
+    {{'Organization.Offices.btnImportOffices'| translate }}
   </button>
 
 </div>
@@ -21,7 +21,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.Offices.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
@@ -31,22 +31,22 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Office Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Offices.name'| translate }} </th>
         <td mat-cell *matCellDef="let offices"> {{ offices.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="externalId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> External ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Offices.externalId'| translate }} </th>
         <td mat-cell *matCellDef="let offices"> {{ offices.externalId }} </td>
       </ng-container>
 
       <ng-container matColumnDef="parentName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Parent Office </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Offices.parentName'| translate }} </th>
         <td mat-cell *matCellDef="let offices"> {{ offices.parentName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="openingDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Opened On </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Offices.openingDate'| translate }} </th>
         <td mat-cell *matCellDef="let offices"> {{ offices.openingDate | date }} </td>
       </ng-container>
 
