--- a/src/app/organization/offices/view-office/view-office.component.html
+++ b/src/app/organization/offices/view-office/view-office.component.html
@@ -3,7 +3,7 @@
   <div fxLayoutAlign="flex-end" class="action-button m-b-20">
     <span *midasHasPermission="'UPDATE_OFFICE'">
       <button mat-raised-button color="primary" [routerLink]="['edit']">
-        <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;Edit Office
+        <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;{{'Organization.Offices.View.btnEditOffice'| translate }}
       </button>
     </span>
   </div>
@@ -15,7 +15,7 @@
       <nav mat-tab-nav-bar class="navigation-tabs">
         <a mat-tab-link [routerLink]="['./general']" routerLinkActive #general="routerLinkActive"
         [active]="general.isActive">
-          General
+        {{'Organization.Offices.View.General'| translate }}
         </a>
         <span *ngFor="let officeDatatable of officeDatatables">
           <a mat-tab-link *midasHasPermission="'READ_' + officeDatatable.registeredTableName"
