--- a/src/app/organization/password-preferences/password-preferences.component.html
+++ b/src/app/organization/password-preferences/password-preferences.component.html
@@ -15,8 +15,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="passwordPreferencesForm.pristine" *midasHasPermission="'UPDATE_PASSWORD_VALIDATION_POLICY'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="passwordPreferencesForm.pristine" *midasHasPermission="'UPDATE_PASSWORD_VALIDATION_POLICY'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
