--- a/src/app/organization/sms-campaigns/edit-campaign/edit-campaign.component.html
+++ b/src/app/organization/sms-campaigns/edit-campaign/edit-campaign.component.html
@@ -24,9 +24,9 @@
 
     <mat-step completed>
 
-      <ng-template matStepLabel>CAMPAIGN</ng-template>
+      <ng-template matStepLabel>{{'Organization.SmsCampaigns.Edit.CAMPAIGN'| translate }}</ng-template>
 
-      <mifosx-edit-sms-campaign-step 
+      <mifosx-edit-sms-campaign-step
         [smsCampaign]="smsCampaign"
         [smsCampaignTemplate]="smsCampaignTemplate"
         (templateParameters)="setParameters($event)"
@@ -37,9 +37,9 @@
 
     <mat-step>
 
-      <ng-template matStepLabel>MESSAGE</ng-template>
+      <ng-template matStepLabel>{{'Organization.SmsCampaigns.Edit.MESSAGE'| translate }}</ng-template>
 
-      <mifosx-campaign-message-step 
+      <mifosx-campaign-message-step
         [templateParameters]="templateParameters"
         [editCampaignMessage]="smsCampaign.campaignMessage"
       >
@@ -49,7 +49,7 @@
 
     <mat-step state="preview" completed>
 
-      <ng-template matStepLabel>PREVIEW</ng-template>
+      <ng-template matStepLabel>{{'Organization.SmsCampaigns.Edit.PREVIEW'| translate }}</ng-template>
 
       <mifosx-campaign-preview-step
         [campaign]="smsCampaign"
