--- a/src/app/organization/sms-campaigns/sms-campaign-stepper/edit-sms-campaign-step/edit-sms-campaign-step.component.html
+++ b/src/app/organization/sms-campaigns/sms-campaign-stepper/edit-sms-campaign-step/edit-sms-campaign-step.component.html
@@ -3,15 +3,15 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start center">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Campaign Name</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.EditSms.campaignName'| translate }}</mat-label>
       <input matInput formControlName="campaignName" required>
       <mat-error>
-        Campaign Name is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.EditSms.errcampaignName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%" *ngIf="!smsCampaignDetailsForm.controls.isNotification.value">
-      <mat-label>SMS Provider</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.EditSms.providerId'| translate }}</mat-label>
       <mat-select formControlName="providerId">
         <mat-option *ngFor="let provider of smsProviders" [value]="provider.id">
           {{ provider.value }}
@@ -20,41 +20,41 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Trigger Type</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.EditSms.triggerType'| translate }}</mat-label>
       <mat-select formControlName="triggerType" required>
         <mat-option *ngFor="let triggerType of triggerTypes" [value]="triggerType.id">
           {{ triggerType.value }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Trigger Type is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.EditSms.errtriggerType'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-checkbox labelPosition="before" formControlName="isNotification" fxFlex="48%">
-      is Notification?
+      {{'Organization.SmsCampaigns.SmsStepper.EditSms.isNotification'| translate }}
     </mat-checkbox>
 
     <mat-form-field fxFlex="48%" *ngIf="smsCampaignDetailsForm.controls.recurrenceStartDate">
-      <mat-label>Schedule Date</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.EditSms.recurrenceStartDate'| translate }}</mat-label>
       <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="recurrenceStartDatePicker"
         formControlName="recurrenceStartDate" required>
       <mat-datepicker-toggle matSuffix [for]="recurrenceStartDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #recurrenceStartDatePicker></mat-datepicker>
       <mat-error>
-        Schedule Date is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.EditSms.errrecurrenceStartDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Business Rule</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.EditSms.runReportId'| translate }}</mat-label>
       <mat-select formControlName="runReportId" required>
         <mat-option *ngFor="let rule of businessRules" [value]="rule.reportId">
           {{ rule.reportName }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Business Rule is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.EditSms.errrunReportId'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
