--- a/src/app/organization/sms-campaigns/sms-campaign-stepper/sms-campaign-step/sms-campaign-step.component.html
+++ b/src/app/organization/sms-campaigns/sms-campaign-stepper/sms-campaign-step/sms-campaign-step.component.html
@@ -3,16 +3,16 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start center">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Campaign Name</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.campaignName'| translate }}</mat-label>
       <input matInput formControlName="campaignName" required>
       <mat-error>
-        Campaign Name is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.errcampaignName'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field fxFlex="48%" 
+    <mat-form-field fxFlex="48%"
       *ngIf="!smsCampaignDetailsForm.controls.isNotification.value">
-      <mat-label>SMS Provider</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.providerId'| translate }}</mat-label>
       <mat-select formControlName="providerId">
         <mat-option *ngFor="let provider of smsProviders" [value]="provider.id">
           {{ provider.value }}
@@ -21,86 +21,88 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Trigger Type</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.triggerType'| translate }}</mat-label>
       <mat-select formControlName="triggerType" required>
         <mat-option *ngFor="let triggerType of triggerTypes" [value]="triggerType.id">
           {{ triggerType.value }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Trigger Type is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.errtriggerType'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-checkbox labelPosition="before" formControlName="isNotification" fxFlex="48%">
-      is Notification?
+      {{'Organization.SmsCampaigns.SmsStepper.SmsStep.isNotification'| translate }}
     </mat-checkbox>
 
     <mat-form-field fxFlex="48%"
       *ngIf="smsCampaignDetailsForm.contains('recurrenceStartDate')">
-      <mat-label>Schedule Date</mat-label>
-      <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="recurrenceStartDatePicker" 
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.recurrenceStartDate'| translate }}</mat-label>
+      <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="recurrenceStartDatePicker"
         formControlName="recurrenceStartDate" required>
       <mat-datepicker-toggle matSuffix [for]="recurrenceStartDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #recurrenceStartDatePicker></mat-datepicker>
       <mat-error>
-        Schedule Date is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.errrecurrenceStartDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%"
       *ngIf="smsCampaignDetailsForm.contains('frequency')">
-      <mat-label>Repeats</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Repeats'| translate }}</mat-label>
       <mat-select formControlName="frequency" required>
-        <mat-option [value]="1">Daily</mat-option>
-        <mat-option [value]="2">Weekly</mat-option>
-        <mat-option [value]="3">Monthly</mat-option>
-        <mat-option [value]="4">Yearly</mat-option>
+        <mat-option [value]="1">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Daily'| translate }}</mat-option>
+        <mat-option [value]="2">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Weekly'| translate }}</mat-option>
+        <mat-option [value]="3">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Monthly'| translate }}</mat-option>
+        <mat-option [value]="4">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Yearly'| translate }}</mat-option>
       </mat-select>
       <mat-error>
-        Repetition Frequency is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.RepetitionFrequency'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%"
       *ngIf="smsCampaignDetailsForm.contains('interval')">
-      <mat-label>Repetition Interval</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.interval'| translate }}</mat-label>
       <mat-select formControlName="interval" required>
         <mat-option *ngFor="let interval of repetitionIntervals" [value]="interval">
           {{ interval }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Repetition Interval is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.errinterval'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%"
       *ngIf="smsCampaignDetailsForm.contains('repeatsOnDay')">
-      <mat-label>Repeats on Day</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.repeatsOnDay'| translate }}</mat-label>
       <mat-select formControlName="repeatsOnDay" required>
-        <mat-option value="1">Monday</mat-option>
-        <mat-option value="2">Tuesday</mat-option>
-        <mat-option value="3">Wednesday</mat-option>
-        <mat-option value="4">Thursday</mat-option>
-        <mat-option value="5">Friday</mat-option>
-        <mat-option value="6">Saturday</mat-option>
-        <mat-option value="7">Sunday</mat-option>
+        <mat-option value="1">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Monday'| translate }}</mat-option>
+        <mat-option value="2">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Tuesday'| translate }}</mat-option>
+        <mat-option value="3">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Wednesday'| translate }}</mat-option>
+        <mat-option value="4">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Thursday'| translate }}</mat-option>
+        <mat-option value="5">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Friday'| translate }}</mat-option>
+        <mat-option value="6">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Saturday'| translate }}</mat-option>
+        <mat-option value="7">{{'Organization.SmsCampaigns.SmsStepper.SmsStep.Sunday'| translate }}</mat-option>
       </mat-select>
       <mat-error>
-        At least <strong>one</strong> day must be selected
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.Atleast'| translate }}
+        <strong>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.one'| translate }}</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.alert'| translate }}
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Business Rule</mat-label>
+      <mat-label>{{'Organization.SmsCampaigns.SmsStepper.SmsStep.runReportId'| translate }}</mat-label>
       <mat-select formControlName="runReportId" required>
         <mat-option *ngFor="let rule of businessRules" [value]="rule.reportId">
           {{ rule.reportName }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Business Rule is <strong>required</strong>
+        {{'Organization.SmsCampaigns.SmsStepper.SmsStep.errrunReportId'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
@@ -110,17 +112,17 @@
     *ngIf="!smsCampaignDetailsForm.controls.runReportId.value">
     <button mat-raised-button matStepperPrevious disabled>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
 
-  <mifosx-business-rule-parameters 
+  <mifosx-business-rule-parameters
     *ngIf="smsCampaignDetailsForm.controls.runReportId.value"
-    [paramData]="paramData" 
+    [paramData]="paramData"
     (templateParameters)="passParameters($event)"
   >
   </mifosx-business-rule-parameters>
