--- a/src/app/organization/sms-campaigns/view-campaign/view-campaign.component.html
+++ b/src/app/organization/sms-campaigns/view-campaign/view-campaign.component.html
@@ -4,31 +4,31 @@
 
     <span *ngIf="smsCampaignData.campaignStatus.value !== 'active'">
       <button mat-raised-button color="primary" *midasHasPermission="'UPDATE_SMSCAMPAIGN'" [routerLink]="['edit']">
-        <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;Edit
+        <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnEdit'| translate }}
       </button>
     </span>
 
     <span *ngIf="smsCampaignData.campaignStatus.value === 'Pending'">
       <button mat-raised-button color="accent" *midasHasPermission="'ACTIVATE_SMSCAMPAIGN'" (click)="activateCampaign()">
-        <fa-icon icon="lock-open"></fa-icon>&nbsp;&nbsp;Activate
+        <fa-icon icon="lock-open"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnActivate'| translate }}
       </button>
     </span>
 
     <span *ngIf="smsCampaignData.campaignStatus.value !== 'closed'">
       <button mat-raised-button color="warn" *midasHasPermission="'CLOSE_SMSCAMPAIGN'" (click)="closeCampaign()">
-        <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;Close
+        <fa-icon icon="times"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnClose'| translate }}
       </button>
     </span>
 
     <span *ngIf="smsCampaignData.campaignStatus.value !== 'Pending' && smsCampaignData.campaignStatus.value !== 'active'">
       <button mat-raised-button color="accent" *midasHasPermission="'REACTIVATE_SMSCAMPAIGN'" (click)="reactivateCampaign()">
-        <fa-icon icon="undo"></fa-icon>&nbsp;&nbsp;Reactivate
+        <fa-icon icon="undo"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnReactivate'| translate }}
       </button>
     </span>
 
     <span *ngIf="smsCampaignData.campaignStatus.value === 'closed'">
       <button mat-raised-button color="warn" *midasHasPermission="'DELETE_SMSCAMPAIGN'" (click)="deleteCampaign()">
-        <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+        <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnDelete'| translate }}
       </button>
     </span>
 
@@ -43,35 +43,35 @@
         <mat-tab label="Campaign">
 
           <div class="tab-content mat-typography">
-          
+
             <mat-list>
 
               <mat-list-item>
-                Campaign Name : {{ smsCampaignData.campaignName }}
+                {{'Organization.SmsCampaigns.View.campaignName'| translate }}{{ smsCampaignData.campaignName }}
               </mat-list-item>
 
               <mat-list-item>
-                Report Name : {{ smsCampaignData.reportName }}
+                {{'Organization.SmsCampaigns.View.reportName'| translate }}{{ smsCampaignData.reportName }}
               </mat-list-item>
 
               <mat-list-item>
-                Status : {{ smsCampaignData.campaignStatus.value }}
-              </mat-list-item>  
-
-              <mat-list-item>
-                Trigger Type : {{ smsCampaignData.triggerType.value }}
+                {{'Organization.SmsCampaigns.View.campaignStatus'| translate }}{{ smsCampaignData.campaignStatus.value }}
               </mat-list-item>
 
               <mat-list-item>
-                Submitted on : {{ smsCampaignData.smsCampaignTimeLine.submittedOnDate | date }}
+                {{'Organization.SmsCampaigns.View.triggerType'| translate }}{{ smsCampaignData.triggerType.value }}
+              </mat-list-item>
+
+              <mat-list-item>
+                {{'Organization.SmsCampaigns.View.submittedOnDate'| translate }}{{ smsCampaignData.smsCampaignTimeLine.submittedOnDate | date }}
               </mat-list-item>
 
               <mat-list-item *ngIf="smsCampaignData.recurrence">
-                Recurrence : {{ smsCampaignData.recurrence }}
+                {{'Organization.SmsCampaigns.View.recurrence'| translate }}{{ smsCampaignData.recurrence }}
               </mat-list-item>
 
               <div fxLayout="column" fxLayoutGap="10px" class="template-message">
-                <h3>Template Message :</h3>
+                <h3>{{'Organization.SmsCampaigns.View.campaignMessage'| translate }}</h3>
                 <textarea matInput disabled>{{ smsCampaignData.campaignMessage}}</textarea>
               </div>
 
@@ -90,14 +90,14 @@
               <div fxLayout="row" fxLayoutGap="3%" fxLayoutAlign="center">
 
                 <mat-form-field>
-                  <mat-label>From Date</mat-label>
+                  <mat-label>{{'Organization.SmsCampaigns.View.fromDate'| translate }}</mat-label>
                   <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" formControlName="fromDate">
                   <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
                   <mat-datepicker #fromDatePicker></mat-datepicker>
                 </mat-form-field>
 
                 <mat-form-field>
-                  <mat-label>To Date</mat-label>
+                  <mat-label>{{'Organization.SmsCampaigns.View.toDate'| translate }}</mat-label>
                   <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" formControlName="toDate">
                   <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
                   <mat-datepicker #toDatePicker></mat-datepicker>
@@ -105,7 +105,7 @@
 
                 <div class="search-button" >
                   <button mat-raised-button color="primary">
-                  <fa-icon icon="search"></fa-icon>&nbsp;&nbsp;Search</button>
+                  <fa-icon icon="search"></fa-icon>&nbsp;&nbsp;{{'Organization.SmsCampaigns.View.btnSearch'| translate }}</button>
                 </div>
               </div>
 
@@ -114,27 +114,27 @@
             <table #messageTable mat-table [dataSource]="dataSource" class="mat-elevation-z1 m-b-25">
 
               <ng-container matColumnDef="Message">
-                <th mat-header-cell *matHeaderCellDef> Message </th>
+                <th mat-header-cell *matHeaderCellDef> {{'Organization.SmsCampaigns.View.Message'| translate }} </th>
                 <td mat-cell *matCellDef="let sms">{{sms.message}}</td>
               </ng-container>
 
               <ng-container matColumnDef="Status">
-                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <th mat-header-cell *matHeaderCellDef> {{'Organization.SmsCampaigns.View.Status'| translate }} </th>
                 <td mat-cell *matCellDef="let sms">{{sms.status.value}}</td>
               </ng-container>
 
               <ng-container matColumnDef="Mobile No.">
-                <th mat-header-cell *matHeaderCellDef> Mobile No. </th>
+                <th mat-header-cell *matHeaderCellDef> {{'Organization.SmsCampaigns.View.mobileNo'| translate }} </th>
                 <td mat-cell *matCellDef="let sms">{{sms.mobileNo}} </td>
               </ng-container>
 
               <ng-container matColumnDef="Campaign Name">
-                <th mat-header-cell *matHeaderCellDef> Campaign Name </th>
+                <th mat-header-cell *matHeaderCellDef> {{'Organization.SmsCampaigns.View.campaignName2'| translate }} </th>
                 <td mat-cell *matCellDef="let sms">{{sms.campaignName}}</td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
             </table>
 
