--- a/src/app/organization/tellers/cashiers/allocate-cash/allocate-cash.component.html
+++ b/src/app/organization/tellers/cashiers/allocate-cash/allocate-cash.component.html
@@ -9,60 +9,60 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.Office'| translate }}</mat-label>
             <input matInput required formControlName="office">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Teller Name</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.tellerName'| translate }}</mat-label>
             <input matInput required formControlName="tellerName">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Cashier</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.Cashier'| translate }}</mat-label>
             <input matInput required formControlName="cashier">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Assignment Period</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.assignmentPeriod'| translate }}</mat-label>
             <input matInput formControlName="assignmentPeriod">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Date</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.Date'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="cashDatePicker" required formControlName="txnDate">
             <mat-datepicker-toggle matSuffix [for]="cashDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #cashDatePicker></mat-datepicker>
             <mat-error *ngIf="allocateCashForm.controls.txnDate.hasError('required')">
-              Date <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Allocate.errDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Currency</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.Currency'| translate }}</mat-label>
             <mat-select required formControlName="currencyCode">
               <mat-option *ngFor="let currency of cashierData.currencyOptions" [value]="currency.code">
                 {{ currency.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="allocateCashForm.controls.currencyCode.hasError('required')">
-              Currency <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Allocate.errCurrency'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Amount</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.Amount'| translate }}</mat-label>
             <input matInput currencyMask type="text" required formControlName="txnAmount">
             <mat-error *ngIf="allocateCashForm.controls.txnAmount.hasError('required')">
-              Amount <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Allocate.errAmount'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Notes/Comments</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Allocate.txnNote'| translate }}</mat-label>
             <input matInput required formControlName="txnNote">
             <mat-error *ngIf="allocateCashForm.controls.txnNote.hasError('required')">
-              Notes/Comments <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Allocate.errtxnNote'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -71,8 +71,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!allocateCashForm.valid" *midasHasPermission="'ALLOCATECASHIER_TELLER'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!allocateCashForm.valid" *midasHasPermission="'ALLOCATECASHIER_TELLER'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
