--- a/src/app/organization/tellers/cashiers/create-cashier/create-cashier.component.html
+++ b/src/app/organization/tellers/cashiers/create-cashier/create-cashier.component.html
@@ -9,55 +9,55 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.Office'| translate }}</mat-label>
             <input matInput required autofocus [value]="cashierTemplate.officeName" disabled>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Teller Name</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.tellerName'| translate }}</mat-label>
             <input matInput required autofocus [value]="cashierTemplate.tellerName" disabled>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Cashier</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.Cashier'| translate }}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of cashierTemplate.staffOptions" [value]="staff.id">
                 {{ staff.displayName }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="createCashierForm.controls.staffId.hasError('required')">
-              Cashier <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Create.errCashier'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Description/Notes</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.description'| translate }}</mat-label>
             <input matInput autofocus formControlName="description">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>From</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.From'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" required formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #fromDatePicker></mat-datepicker>
             <mat-error *ngIf="createCashierForm.controls.startDate.hasError('required')">
-              From Date <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Create.errFrom'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Create.To'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" required formControlName="endDate">
             <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #toDatePicker></mat-datepicker>
             <mat-error *ngIf="createCashierForm.controls.endDate.hasError('required')">
-              To Date <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Create.errTo'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxFlex="48%" style="padding-top: 10px;">
             <mat-checkbox labelPosition="before" formControlName="isFullDay">
-              Full Day?
+              {{'Organization.Tellers.Cashiers.Create.isFullDay'| translate }}
             </mat-checkbox>
           </div>
 
@@ -66,8 +66,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!createCashierForm.valid" *midasHasPermission="'UPDATECASHIERALLOCATION_TELLER'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!createCashierForm.valid" *midasHasPermission="'UPDATECASHIERALLOCATION_TELLER'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
