--- a/src/app/organization/tellers/cashiers/edit-cashier/edit-cashier.component.html
+++ b/src/app/organization/tellers/cashiers/edit-cashier/edit-cashier.component.html
@@ -9,17 +9,17 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Office</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.Office'| translate }}</mat-label>
             <input matInput required autofocus [value]="cashierData.template.officeName" disabled>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Teller Name</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.tellerName'| translate }}</mat-label>
             <input matInput required autofocus [value]="cashierData.data.tellerName" disabled>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%" *ngIf="isStaffId">
-            <mat-label>Cashier</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.Cashier'| translate }}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of cashierData.template.staffOptions" [value]="staff.id">
                 {{ staff.displayName }}
@@ -28,42 +28,42 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%" *ngIf="!isStaffId">
-            <mat-label>Cashier</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.Cashier'| translate }}</mat-label>
             <mat-select formControlName="staffId" *ngIf="!isStaffId">
               <mat-option [value]="cashierData.data.staffId">
-                Select Option
+                {{'Organization.Tellers.Cashiers.Edit.SelectOption'| translate }}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Description/Notes</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.description'| translate }}</mat-label>
             <input matInput autofocus formControlName="description">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>From</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.From'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" required formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #fromDatePicker></mat-datepicker>
             <mat-error *ngIf="editCashierForm.controls.startDate.hasError('required')">
-              From Date <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Edit.errFrom'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To</mat-label>
+            <mat-label>{{'Organization.Tellers.Cashiers.Edit.To'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" required formControlName="endDate">
             <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #toDatePicker></mat-datepicker>
             <mat-error *ngIf="editCashierForm.controls.endDate.hasError('required')">
-              To Date <strong>is required</strong>
+              {{'Organization.Tellers.Cashiers.Edit.errTo'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxFlex="48%" style="padding-top: 10px;">
             <mat-checkbox labelPosition="before" formControlName="isFullDay">
-              Full Day?
+              {{'Organization.Tellers.Cashiers.Edit.isFullDay'| translate }}
             </mat-checkbox>
           </div>
 
@@ -72,8 +72,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!editCashierForm.valid" *midasHasPermission="'UPDATECASHIERALLOCATION_TELLER'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!editCashierForm.valid" *midasHasPermission="'UPDATECASHIERALLOCATION_TELLER'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
