--- a/src/app/organization/tellers/create-teller/create-teller.component.html
+++ b/src/app/organization/tellers/create-teller/create-teller.component.html
@@ -9,59 +9,61 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Teller Name</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.name'| translate }}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="tellerForm.controls.name.hasError('required')">
-              Teller Name is <strong>required</strong>
+              {{'Organization.Tellers.Create.errname'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
             <mat-error *ngIf="tellerForm.controls.name.hasError('pattern')">
-              Teller Name <strong>cannot</strong> begin with a special character or number
+              {{'Organization.Tellers.Create.errname2'| translate }}
+              <strong>{{'Organization.Tellers.Create.cannot'| translate }}</strong>
+              {{'Organization.Tellers.Create.alert'| translate }}
             </mat-error>
-          </mat-form-field>		
+          </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Office</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.Office'| translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="tellerForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{'Organization.Tellers.Create.errOffice'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.Description'| translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Start Date</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.startDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #startDatePicker></mat-datepicker>
             <mat-error *ngIf="tellerForm.controls.startDate.hasError('required')">
-              Start Date is <strong>required</strong>
+              {{'Organization.Tellers.Create.errstartDate'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>End Date</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.endDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="endDatePicker" formControlName="endDate">
             <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #endDatePicker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Status</mat-label>
+            <mat-label>{{'Organization.Tellers.Create.Status'| translate }}</mat-label>
             <mat-select required formControlName="status">
               <mat-option *ngFor="let tellerStatus of tellerStatusesData" [value]="tellerStatus.id">
                 {{ tellerStatus.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="tellerForm.controls.status.hasError('required')">
-              Status is <strong>required</strong>
+              {{'Organization.Tellers.Create.errStatus'| translate }}<strong>{{'Organization.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -70,8 +72,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!tellerForm.valid" *midasHasPermission="'CREATE_TELLER'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!tellerForm.valid" *midasHasPermission="'CREATE_TELLER'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
